Consigue poner el log en JSON

--- a/gunicorn_logging.conf
+++ b/gunicorn_logging.conf
@@ -2,7 +2,7 @@
 keys=root, gunicorn.error, gunicorn.access
 
 [handlers]
-keys=console
+keys=console, access_file
 
 [formatters]
 keys=json
@@ -17,16 +17,22 @@ handlers=console
 propagate=0
 qualname=gunicorn.error
 
+[logger_gunicorn.access]
+level=INFO
+handlers=access_file
+propagate=0
+qualname=gunicorn.access
+
 [handler_console]
 class=StreamHandler
 formatter=json
 args=(sys.stdout, )
 
+[handler_access_file]
+class=logging.FileHandler
+formatter=json
+args=('gunicorn.access.log',)
+
 [formatter_json]
 class=jsonlogging.JSONFormatter
 
-[logger_gunicorn.access]
-level=INFO
-handlers=console
-propagate=0
-qualname=gunicorn.access
