Añade configuración logstash

--- a/gunicorn_logging.conf
+++ b/gunicorn_logging.conf
@@ -2,7 +2,7 @@
 keys=root, gunicorn.error, gunicorn.access
 
 [handlers]
-keys=console, access_file
+keys=console, logstash
 
 [formatters]
 keys=json
@@ -19,7 +19,7 @@ qualname=gunicorn.error
 
 [logger_gunicorn.access]
 level=INFO
-handlers=access_file
+handlers=logstash
 propagate=0
 qualname=gunicorn.access
 
@@ -28,10 +28,10 @@ class=StreamHandler
 formatter=json
 args=(sys.stdout, )
 
-[handler_access_file]
-class=logging.FileHandler
+[handler_logstash]
+class=logstash.TCPLogstashHandler
 formatter=json
-args=('gunicorn.access.log',)
+args=('localhost',5959)
 
 [formatter_json]
 class=jsonlogging.JSONFormatter
