--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
       - "5959"
     ports:
       - "5959:5959"
+    command: -e 'input {      tcp {     port => 5959     codec => json   } } output { stdout {} }'
     
   web:
     build: .
     ports:
       - "8000:80"
-
+    links:
+      - logstash
     
