--- a/gunicorn_logging.conf
+++ b/gunicorn_logging.conf
@@ -31,7 +31,8 @@ args=(sys.stdout, )
 [handler_logstash]
 class=logstash.TCPLogstashHandler
 formatter=json
-args=('logstash',5959)
+host=logstash
+port=5959
 
 [formatter_json]
 class=jsonlogging.JSONFormatter
