--- a/gunicorn_logging.conf
+++ b/gunicorn_logging.conf
@@ -31,8 +31,7 @@ args=(sys.stdout, )
 [handler_logstash]
 class=logstash.TCPLogstashHandler
 formatter=json
-host=logstash
-port=5959
+args=('logstash',5959)
 
 [formatter_json]
 class=jsonlogging.JSONFormatter
