--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -1,12 +1,3 @@
-lb:
-  image: dockercloud/haproxy
-  links:
-    - web
-  ports:
-    - "80:80"
-  roles:
-    - global
-
 logstash:
   image: docker.elastic.co/logstash/logstash-oss:6.2.1
   expose:
@@ -16,7 +7,7 @@ logstash:
   command: -e 'input { tcp {  port => 5959  codec => json   } } output { stdout {} }'
       
 web:
-  build: .
+  image: jjmerelo/platzi-servicio-web
   links:
     - logstash
     
